--- a/style.css
+++ b/style.css
@@ -1,51 +1,53 @@
 body {
-    background-color: #2c3347;
+    background-color: #1a1f2e;
     color: #ffffff;
+    font-family: "Montserrat", sans-serif;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
   }
   
+  
   h1 {
-    font-size: 48px;
-    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
     font-weight: 200;
-  
     text-align: center;
-    line-height: 59px;
-  
-    padding: 0 64px;
     margin: 0;
+    color: #f2c94c;
   }
   
   .stopwatch {
-    display: grid;
-    justify-items: center;
-    grid-row-gap: 23px;
-    width: 100%;
-    padding-top: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    max-width: 400px;
   }
   
   .circle {
     display: flex;
     justify-content: center;
     align-items: center;
-  
-    height: 270px;
-    width: 270px;
-  
-    border: 2px solid;
+    height: 200px;
+    width: 200px;
+    border: 8px solid #f2c94c;
     border-radius: 50%;
+    margin-top: 20px;
   }
   
   .time {
     font-family: "Roboto Mono", monospace;
     font-weight: 300;
-    font-size: 48px;
+    font-size: 36px;
+    color: #ffffff;
   }
   
   .gold {
     font-weight: 900;
-  
     color: #f2c94c;
-    text-shadow: 0 0 0px #fff, 0 0 50px #f2c94c;
+    text-shadow: 0 0 10px rgba(242, 201, 76, 0.5);
   }
   
   .controls {
@@ -71,3 +73,4 @@ body {
   #pauseButton {
     display: none;
   }
+  
